[tool.poetry]
name = "post-tracker"
version = "0.1.0"
description = ""
authors = ["Amir Aref <amiraref808@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
bs4 = "^0.0.2"
user-agent = "^0.1.10"
pydantic = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [tool.ruff]
# force-exclude = true
# extend-exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8 naming
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "ASYNC", # flake8 async
    "LOG", # flake8 logging
     # "ANN" # flake8 annotations,
]
