[tool.poetry]
name = "post-tracker"
version = "0.1.0"
description = "this is a command line tool to get tracking information about your parcels from tracking.post.ir"
authors = ["Amir Aref <amiraref808@gmail.com>"]
readme = "README.md"
packages = [{include = "post_tracker"}]
license = "MIT"
repository = "https://github.com/AmirAref/post-tracker"
homepage = "https://github.com/AmirAref/post-tracker"
classifiers = [
    "Development Status :: 4 - Beta",
    # "Typing :: Typed",
	"Operating System :: POSIX",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",

]
[tool.poetry.dependencies]
python = ">=3.10,<4"
httpx = "^0.27.0"
bs4 = "^0.0.2"
user-agent = "^0.1.10"
pydantic = "^2.8.0"
pydymenu = "^0.5.2"

[tool.poetry.scripts]
post-tracker = 'post_tracker.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8 naming
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "ASYNC", # flake8 async
    "LOG", # flake8 logging
     # "ANN" # flake8 annotations,
]
