[project]
name = "post-tracker"
version = "0.3.2"
description = "this is a command line tool to get tracking information about your parcels from tracking.post.ir"
authors = [
    { name = "Amir Aref", email = "amiraref808@gmail.com" }
]
dependencies = [
    "httpx>=0.27.0,<0.28",
    "user-agent>=0.1.10",
    "pydantic>=2.8.2",
    # "pydymenu>=0.5.2",
    "bs4>=0.0.2",
    "rich>=13.8.0",
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    # "Typing :: Typed",
    "Operating System :: POSIX",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",

]



[project.urls]
Repository = "https://github.com/AmirAref/post-tracker"
Homepage = "https://github.com/AmirAref/post-tracker"

[project.scripts]
post-tracker = 'post_tracker.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["post_tracker"]

[tool.behavior]
use-uv = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8 naming
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "ASYNC", # flake8 async
    "LOG", # flake8 logging
     "ANN" # flake8 annotations,
]
unfixable = []

ignore = ["ANN101"]
